--- a/src/components/moving_boxes/MovingBoxes.module.css
+++ b/src/components/moving_boxes/MovingBoxes.module.css
@@ -1,65 +1,65 @@
 .wrapper {
-    font-size: 100%;
-    color: wheat;
-    padding: 4vmax;
-    min-height: 100vh;
-    min-width: 65vmax;
-    border-radius: 10px;
-    transition-duration: 0.7s;
-    margin-left: 1vmax;
-    position: relative;
+  font-size: 100%;
+  color: wheat;
+  padding: 4vmax;
+  min-height: 100vh;
+  min-width: 65vmax;
+  border-radius: 10px;
+  transition-duration: 0.7s;
+  margin-left: 1vmax;
+  position: relative;
 }
 
 .wrapper:hover {
-    background-color: rgba(101, 0, 255, 0.25);
+  background-color: rgba(101, 0, 255, 0.25);
 }
 
 .arrows {
-    display: grid;
-    grid-template: auto auto / auto auto auto;
-    grid-template-areas:
-            '. up .'
-            'left down right';
-    grid-gap: 8px;
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
+  display: grid;
+  grid-template: auto auto / auto auto auto;
+  grid-template-areas:
+    ". up ."
+    "left down right";
+  grid-gap: 8px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
 }
 
 .arrows button {
-    cursor: pointer;
-    font-size: 16px;
-    width: 60px;
-    height: 40px;
-    background: rgba(43, 159, 75, 0.811);
-    color: rgb(167, 220, 182);
-    border: none;
-    border-radius: 8px;
-    outline: none;
-    transition: 0.3s ease all;
+  cursor: pointer;
+  font-size: 16px;
+  width: 60px;
+  height: 40px;
+  background-color: rgba(43, 159, 75, 0.811);
+  color: rgb(167, 220, 182);
+  border: none;
+  border-radius: 8px;
+  outline: none;
+  transition: 0.3s ease all;
 }
 
 .arrows button:hover {
-    background: rgba(51, 177, 87, 0.811);
-    color: #fff;
+  background-color: rgba(51, 177, 87, 0.811);
+  color: #fff;
 }
 
 .arrows button:first-child {
-    grid-area: up;
+  grid-area: up;
 }
 
 .arrows button:nth-child(2) {
-    grid-area: left;
+  grid-area: left;
 }
 
 .arrows button:nth-child(3) {
-    grid-area: down;
+  grid-area: down;
 }
 
 .arrows button:last-child {
-    grid-area: right;
+  grid-area: right;
 }
 
 .images {
-    display: none;
+  display: none;
 }
